--- a/tic-tac-toe/package.json
+++ b/tic-tac-toe/package.json
@@ -12,6 +12,7 @@
     "express": "~4.13.1",
     "express-handlebars": "^3.0.0",
     "handlebars": "^4.0.5",
+    "livereload": "^0.5.0",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0"
   }
